--- a/projet_sdp.ipynb
+++ b/projet_sdp.ipynb
@@ -38,40 +38,18 @@
         "\n",
         "import gurobipy as grb\n",
         "import pandas as pd\n",
-        "from gurobipy import GRB"
+        "from gurobipy import GRB\n",
+        "import json"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IoIdvtpxmrMo",
-        "outputId": "b2a6cde8-afd7-438e-9239-97ac4d470f37"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ]
-    },
-    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "nk8mXU7QgM28"
       },
       "source": [
-        "Model"
+        "# Model"
       ]
     },
     {
@@ -94,7 +72,7 @@
         }
       ],
       "source": [
-        " # Create a model\n",
+        "# Create a model\n",
         "model = grb.Model(\"Model\")"
       ]
     },
@@ -116,8 +94,7 @@
       "outputs": [],
       "source": [
         "# get the  data from the json file small.json\n",
-        "import json\n",
-        "with open('/content/drive/MyDrive/Colab Notebooks/SDP/toy_instance.json') as f:\n",
+        "with open('toy_instance.json') as f:\n",
         "    data = json.load(f)\n",
         "\n",
         "horizon=data['horizon']\n",
@@ -919,7 +896,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "env",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -933,12 +910,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.8"
+      "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "7ba4d9131b28a25e673a5eedffce26d9d813237da3453983d8ab74cee15e9ce5"
+        "hash": "992fe7c5fc85bbb99cdbb1a7127f4f04531c143f133625dff1af063a39de0f81"
       }
     }
   },
