--- a/projet_sdp copy.ipynb
+++ b/projet_sdp copy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Restricted license - for non-production use only - expires 2024-10-28\n"
+     ]
+    }
+   ],
    "source": [
     " # Create a model\n",
     "model = grb.Model(\"Model\")"
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +95,7 @@
        "   'working_days_per_qualification': {'C': 2}}]}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +351,7 @@
        "{'Job1': 20, 'Job2': 15, 'Job3': 15, 'Job4': 20, 'Job5': 10}"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +398,7 @@
        "70.0"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +433,7 @@
        " 'Job5': <gurobi.Var tk[Job5] (value -0.0)>}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +601,7 @@
        "221    Emma  Job5  4  C  1.0"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,76 +646,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_c51a5_row0_col0, #T_c51a5_row0_col3, #T_c51a5_row1_col3 {\n",
+       "#T_b91dd_row0_col0, #T_b91dd_row0_col3, #T_b91dd_row1_col3 {\n",
        "  background-color: black;\n",
        "}\n",
-       "#T_c51a5_row0_col1, #T_c51a5_row1_col1, #T_c51a5_row2_col4 {\n",
+       "#T_b91dd_row0_col1, #T_b91dd_row1_col1, #T_b91dd_row2_col4 {\n",
        "  background-color: orange;\n",
        "}\n",
-       "#T_c51a5_row0_col2, #T_c51a5_row1_col2, #T_c51a5_row2_col2 {\n",
+       "#T_b91dd_row0_col2, #T_b91dd_row1_col2, #T_b91dd_row2_col2 {\n",
        "  background-color: blue;\n",
        "}\n",
-       "#T_c51a5_row0_col4, #T_c51a5_row1_col4, #T_c51a5_row2_col0 {\n",
+       "#T_b91dd_row0_col4, #T_b91dd_row1_col4, #T_b91dd_row2_col0 {\n",
        "  background-color: grey;\n",
        "}\n",
-       "#T_c51a5_row1_col0, #T_c51a5_row2_col1 {\n",
+       "#T_b91dd_row1_col0, #T_b91dd_row2_col1 {\n",
        "  background-color: red;\n",
        "}\n",
-       "#T_c51a5_row2_col3 {\n",
+       "#T_b91dd_row2_col3 {\n",
        "  background-color: green;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_c51a5\">\n",
+       "<table id=\"T_b91dd\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_c51a5_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
-       "      <th id=\"T_c51a5_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
-       "      <th id=\"T_c51a5_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
-       "      <th id=\"T_c51a5_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
-       "      <th id=\"T_c51a5_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
+       "      <th id=\"T_b91dd_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
+       "      <th id=\"T_b91dd_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
+       "      <th id=\"T_b91dd_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
+       "      <th id=\"T_b91dd_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
+       "      <th id=\"T_b91dd_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_c51a5_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
-       "      <td id=\"T_c51a5_row0_col0\" class=\"data row0 col0\" >B Job2</td>\n",
-       "      <td id=\"T_c51a5_row0_col1\" class=\"data row0 col1\" >C Job3</td>\n",
-       "      <td id=\"T_c51a5_row0_col2\" class=\"data row0 col2\" >A Job1</td>\n",
-       "      <td id=\"T_c51a5_row0_col3\" class=\"data row0 col3\" >A Job2</td>\n",
-       "      <td id=\"T_c51a5_row0_col4\" class=\"data row0 col4\" >B Job4</td>\n",
+       "      <th id=\"T_b91dd_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
+       "      <td id=\"T_b91dd_row0_col0\" class=\"data row0 col0\" >B Job2</td>\n",
+       "      <td id=\"T_b91dd_row0_col1\" class=\"data row0 col1\" >C Job3</td>\n",
+       "      <td id=\"T_b91dd_row0_col2\" class=\"data row0 col2\" >A Job1</td>\n",
+       "      <td id=\"T_b91dd_row0_col3\" class=\"data row0 col3\" >A Job2</td>\n",
+       "      <td id=\"T_b91dd_row0_col4\" class=\"data row0 col4\" >B Job4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_c51a5_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
-       "      <td id=\"T_c51a5_row1_col0\" class=\"data row1 col0\" >X</td>\n",
-       "      <td id=\"T_c51a5_row1_col1\" class=\"data row1 col1\" >A Job3</td>\n",
-       "      <td id=\"T_c51a5_row1_col2\" class=\"data row1 col2\" >B Job1</td>\n",
-       "      <td id=\"T_c51a5_row1_col3\" class=\"data row1 col3\" >B Job2</td>\n",
-       "      <td id=\"T_c51a5_row1_col4\" class=\"data row1 col4\" >B Job4</td>\n",
+       "      <th id=\"T_b91dd_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
+       "      <td id=\"T_b91dd_row1_col0\" class=\"data row1 col0\" >X</td>\n",
+       "      <td id=\"T_b91dd_row1_col1\" class=\"data row1 col1\" >A Job3</td>\n",
+       "      <td id=\"T_b91dd_row1_col2\" class=\"data row1 col2\" >B Job1</td>\n",
+       "      <td id=\"T_b91dd_row1_col3\" class=\"data row1 col3\" >B Job2</td>\n",
+       "      <td id=\"T_b91dd_row1_col4\" class=\"data row1 col4\" >B Job4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_c51a5_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
-       "      <td id=\"T_c51a5_row2_col0\" class=\"data row2 col0\" >C Job4</td>\n",
-       "      <td id=\"T_c51a5_row2_col1\" class=\"data row2 col1\" >X</td>\n",
-       "      <td id=\"T_c51a5_row2_col2\" class=\"data row2 col2\" >C Job1</td>\n",
-       "      <td id=\"T_c51a5_row2_col3\" class=\"data row2 col3\" >C Job5</td>\n",
-       "      <td id=\"T_c51a5_row2_col4\" class=\"data row2 col4\" >C Job3</td>\n",
+       "      <th id=\"T_b91dd_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
+       "      <td id=\"T_b91dd_row2_col0\" class=\"data row2 col0\" >C Job4</td>\n",
+       "      <td id=\"T_b91dd_row2_col1\" class=\"data row2 col1\" >X</td>\n",
+       "      <td id=\"T_b91dd_row2_col2\" class=\"data row2 col2\" >C Job1</td>\n",
+       "      <td id=\"T_b91dd_row2_col3\" class=\"data row2 col3\" >C Job5</td>\n",
+       "      <td id=\"T_b91dd_row2_col4\" class=\"data row2 col4\" >C Job3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1c3dd19e5c0>"
+       "<pandas.io.formats.style.Styler at 0x26e8c4464f0>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +798,7 @@
        " ('Job5', 5): <gurobi.Var zk_j[Job5,5] (value 1.0)>}"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +817,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -823,11 +831,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "7ba4d9131b28a25e673a5eedffce26d9d813237da3453983d8ab74cee15e9ce5"
+    "hash": "992fe7c5fc85bbb99cdbb1a7127f4f04531c143f133625dff1af063a39de0f81"
    }
   }
  },
