--- a/moustapha.ipynb
+++ b/moustapha.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,15 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2023-12-10\n"
+      "Restricted license - for non-production use only - expires 2024-10-28\n"
      ]
     }
    ],
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +93,7 @@
        "   'working_days_per_qualification': {'C': 2}}]}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +162,7 @@
        "[[], [1], [2]]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +219,7 @@
        "{'Olivia': [], 'Liam': [1], 'Emma': [2]}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,16 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<gurobi.Model Continuous instance Model: 0 constrs, 0 vars, Parameter changes: Username=(user-defined)>"
+       "<gurobi.Model Continuous instance Model: 0 constrs, 0 vars, No parameter changes>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,20 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -315,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +365,7 @@
        "65.0"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -432,27 +420,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Olivia</td>\n",
-       "      <td>Job1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Olivia</td>\n",
-       "      <td>Job1</td>\n",
-       "      <td>B</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>Olivia</td>\n",
        "      <td>Job3</td>\n",
        "      <td>C</td>\n",
        "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>Job4</td>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -472,11 +452,19 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
+       "      <th>77</th>\n",
        "      <td>Liam</td>\n",
-       "      <td>Job2</td>\n",
-       "      <td>B</td>\n",
+       "      <td>Job1</td>\n",
+       "      <td>A</td>\n",
        "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>Liam</td>\n",
+       "      <td>Job1</td>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -488,19 +476,11 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>Liam</td>\n",
-       "      <td>Job4</td>\n",
-       "      <td>B</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>162</th>\n",
+       "      <th>160</th>\n",
        "      <td>Emma</td>\n",
        "      <td>Job1</td>\n",
        "      <td>C</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -512,11 +492,11 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>205</th>\n",
+       "      <th>207</th>\n",
        "      <td>Emma</td>\n",
        "      <td>Job4</td>\n",
        "      <td>C</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -533,21 +513,20 @@
       ],
       "text/plain": [
        "          0     1  2  3    4\n",
-       "0    Olivia  Job1  A  1  1.0\n",
-       "6    Olivia  Job1  B  2  1.0\n",
        "43   Olivia  Job3  C  4  1.0\n",
+       "51   Olivia  Job4  B  2  1.0\n",
        "52   Olivia  Job4  B  3  1.0\n",
        "74   Olivia  Job5  C  5  1.0\n",
-       "97     Liam  Job2  B  3  1.0\n",
+       "77     Liam  Job1  A  3  1.0\n",
+       "81     Liam  Job1  B  2  1.0\n",
        "108    Liam  Job3  A  4  1.0\n",
-       "126    Liam  Job4  B  2  1.0\n",
-       "162    Emma  Job1  C  3  1.0\n",
+       "160    Emma  Job1  C  1  1.0\n",
        "193    Emma  Job3  C  4  1.0\n",
-       "205    Emma  Job4  C  1  1.0\n",
+       "207    Emma  Job4  C  3  1.0\n",
        "224    Emma  Job5  C  5  1.0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -625,27 +604,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Olivia</td>\n",
-       "      <td>Job1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Olivia</td>\n",
-       "      <td>Job1</td>\n",
-       "      <td>B</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>Olivia</td>\n",
        "      <td>Job3</td>\n",
        "      <td>C</td>\n",
        "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>Job4</td>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -665,11 +636,19 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
+       "      <th>77</th>\n",
        "      <td>Liam</td>\n",
-       "      <td>Job2</td>\n",
-       "      <td>B</td>\n",
+       "      <td>Job1</td>\n",
+       "      <td>A</td>\n",
        "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>Liam</td>\n",
+       "      <td>Job1</td>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -681,19 +660,11 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>Liam</td>\n",
-       "      <td>Job4</td>\n",
-       "      <td>B</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>162</th>\n",
+       "      <th>160</th>\n",
        "      <td>Emma</td>\n",
        "      <td>Job1</td>\n",
        "      <td>C</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -705,11 +676,11 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>205</th>\n",
+       "      <th>207</th>\n",
        "      <td>Emma</td>\n",
        "      <td>Job4</td>\n",
        "      <td>C</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -726,21 +697,20 @@
       ],
       "text/plain": [
        "          0     1  2  3    4\n",
-       "0    Olivia  Job1  A  1  1.0\n",
-       "6    Olivia  Job1  B  2  1.0\n",
        "43   Olivia  Job3  C  4  1.0\n",
+       "51   Olivia  Job4  B  2  1.0\n",
        "52   Olivia  Job4  B  3  1.0\n",
        "74   Olivia  Job5  C  5  1.0\n",
-       "97     Liam  Job2  B  3  1.0\n",
+       "77     Liam  Job1  A  3  1.0\n",
+       "81     Liam  Job1  B  2  1.0\n",
        "108    Liam  Job3  A  4  1.0\n",
-       "126    Liam  Job4  B  2  1.0\n",
-       "162    Emma  Job1  C  3  1.0\n",
+       "160    Emma  Job1  C  1  1.0\n",
        "193    Emma  Job3  C  4  1.0\n",
-       "205    Emma  Job4  C  1  1.0\n",
+       "207    Emma  Job4  C  3  1.0\n",
        "224    Emma  Job5  C  5  1.0"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,79 +721,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_783fc_row0_col0, #T_783fc_row0_col1, #T_783fc_row2_col2 {\n",
-       "  background-color: blue;\n",
-       "}\n",
-       "#T_783fc_row0_col2, #T_783fc_row1_col1, #T_783fc_row2_col0 {\n",
-       "  background-color: yellow;\n",
-       "}\n",
-       "#T_783fc_row0_col3, #T_783fc_row1_col3, #T_783fc_row2_col3 {\n",
-       "  background-color: orange;\n",
-       "}\n",
-       "#T_783fc_row0_col4, #T_783fc_row2_col4 {\n",
-       "  background-color: green;\n",
-       "}\n",
-       "#T_783fc_row1_col0, #T_783fc_row2_col1 {\n",
-       "  background-color: red;\n",
-       "}\n",
-       "#T_783fc_row1_col2 {\n",
-       "  background-color: pink;\n",
-       "}\n",
-       "#T_783fc_row1_col4 {\n",
+       "#T_4fb85_row0_col0, #T_4fb85_row1_col4 {\n",
        "  background-color: white;\n",
        "}\n",
+       "#T_4fb85_row0_col1, #T_4fb85_row0_col2, #T_4fb85_row2_col2 {\n",
+       "  background-color: yellow;\n",
+       "}\n",
+       "#T_4fb85_row0_col3, #T_4fb85_row1_col3, #T_4fb85_row2_col3 {\n",
+       "  background-color: orange;\n",
+       "}\n",
+       "#T_4fb85_row0_col4, #T_4fb85_row2_col4 {\n",
+       "  background-color: green;\n",
+       "}\n",
+       "#T_4fb85_row1_col0, #T_4fb85_row2_col1 {\n",
+       "  background-color: red;\n",
+       "}\n",
+       "#T_4fb85_row1_col1, #T_4fb85_row1_col2, #T_4fb85_row2_col0 {\n",
+       "  background-color: blue;\n",
+       "}\n",
        "</style>\n",
-       "<table id=\"T_783fc\">\n",
+       "<table id=\"T_4fb85\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_783fc_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
-       "      <th id=\"T_783fc_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
-       "      <th id=\"T_783fc_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
-       "      <th id=\"T_783fc_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
-       "      <th id=\"T_783fc_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
+       "      <th id=\"T_4fb85_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
+       "      <th id=\"T_4fb85_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
+       "      <th id=\"T_4fb85_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
+       "      <th id=\"T_4fb85_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
+       "      <th id=\"T_4fb85_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_783fc_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
-       "      <td id=\"T_783fc_row0_col0\" class=\"data row0 col0\" >Job1 A</td>\n",
-       "      <td id=\"T_783fc_row0_col1\" class=\"data row0 col1\" >Job1 B</td>\n",
-       "      <td id=\"T_783fc_row0_col2\" class=\"data row0 col2\" >Job4 B</td>\n",
-       "      <td id=\"T_783fc_row0_col3\" class=\"data row0 col3\" >Job3 C</td>\n",
-       "      <td id=\"T_783fc_row0_col4\" class=\"data row0 col4\" >Job5 C</td>\n",
+       "      <th id=\"T_4fb85_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
+       "      <td id=\"T_4fb85_row0_col0\" class=\"data row0 col0\" >nan</td>\n",
+       "      <td id=\"T_4fb85_row0_col1\" class=\"data row0 col1\" >Job4 B</td>\n",
+       "      <td id=\"T_4fb85_row0_col2\" class=\"data row0 col2\" >Job4 B</td>\n",
+       "      <td id=\"T_4fb85_row0_col3\" class=\"data row0 col3\" >Job3 C</td>\n",
+       "      <td id=\"T_4fb85_row0_col4\" class=\"data row0 col4\" >Job5 C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_783fc_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
-       "      <td id=\"T_783fc_row1_col0\" class=\"data row1 col0\" >X</td>\n",
-       "      <td id=\"T_783fc_row1_col1\" class=\"data row1 col1\" >Job4 B</td>\n",
-       "      <td id=\"T_783fc_row1_col2\" class=\"data row1 col2\" >Job2 B</td>\n",
-       "      <td id=\"T_783fc_row1_col3\" class=\"data row1 col3\" >Job3 A</td>\n",
-       "      <td id=\"T_783fc_row1_col4\" class=\"data row1 col4\" >nan</td>\n",
+       "      <th id=\"T_4fb85_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
+       "      <td id=\"T_4fb85_row1_col0\" class=\"data row1 col0\" >X</td>\n",
+       "      <td id=\"T_4fb85_row1_col1\" class=\"data row1 col1\" >Job1 B</td>\n",
+       "      <td id=\"T_4fb85_row1_col2\" class=\"data row1 col2\" >Job1 A</td>\n",
+       "      <td id=\"T_4fb85_row1_col3\" class=\"data row1 col3\" >Job3 A</td>\n",
+       "      <td id=\"T_4fb85_row1_col4\" class=\"data row1 col4\" >nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_783fc_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
-       "      <td id=\"T_783fc_row2_col0\" class=\"data row2 col0\" >Job4 C</td>\n",
-       "      <td id=\"T_783fc_row2_col1\" class=\"data row2 col1\" >X</td>\n",
-       "      <td id=\"T_783fc_row2_col2\" class=\"data row2 col2\" >Job1 C</td>\n",
-       "      <td id=\"T_783fc_row2_col3\" class=\"data row2 col3\" >Job3 C</td>\n",
-       "      <td id=\"T_783fc_row2_col4\" class=\"data row2 col4\" >Job5 C</td>\n",
+       "      <th id=\"T_4fb85_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
+       "      <td id=\"T_4fb85_row2_col0\" class=\"data row2 col0\" >Job1 C</td>\n",
+       "      <td id=\"T_4fb85_row2_col1\" class=\"data row2 col1\" >X</td>\n",
+       "      <td id=\"T_4fb85_row2_col2\" class=\"data row2 col2\" >Job4 C</td>\n",
+       "      <td id=\"T_4fb85_row2_col3\" class=\"data row2 col3\" >Job3 C</td>\n",
+       "      <td id=\"T_4fb85_row2_col4\" class=\"data row2 col4\" >Job5 C</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f9d5007bc10>"
+       "<pandas.io.formats.style.Styler at 0x1351a329a90>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -855,13 +822,33 @@
        "[3, 3, 4, 3, 5]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "due_dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20, 15, 15, 20, 10]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "job_gain"
    ]
   },
   {
@@ -888,7 +875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
